--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "eslint": "^8.23.1",
     "express": "^4.18.1",
-    "jest": "^29.0.3",
+    "jest": "^29.1.2",
     "pg": "^8.8.0",
     "sequelize": "^6.23.1",
     "sequelize-cli": "^6.4.1",
@@ -11,13 +11,13 @@
     "supertest": "^6.2.4"
   },
   "name": "api-server",
-  "description": "",
+  "description": "## Phase 3 Requirements",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "lint": "eslint **/*.js",
-    "test": "jest --verbose --coverage",
+    "test": "NODE_ENV=test jest --verbose --coverage",
     "test-watch": "jest --watchAll --verbose --coverage",
     "db:config": "sequelize init:config",
     "db:create": "sequelize db:create"
